Fix wishlists dropdown z-index

--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -581,3 +581,11 @@ button.item {
 
     background-color: transparent;
 }
+
+/**
+ * Wishlists
+ */
+.ui.selection.dropdown.wishlists.active,
+.ui.selection.dropdown.wishlists.visible {
+    z-index: calc(var(--dimmerZIndex) + 2);
+}
